# statiker

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: main.yml
src/: config.rs  connection.rs  logs.rs  main.rs  utils.rs
src/http/: mod.rs  server.rs
src/http/request/: request.rs
statiker/: Cargo.toml  Dockerfile  README.md
statiker/sample/: index.html
statiker/src/: main.rs  upload_page.rs
surfer/: Cargo.toml
surfer/src/: lib.rs  request.rs  server.rs
