[package]
name = "statiker"
version = "0.1.1"
edition = "2021"
description = "Serves static files from a directory"
authors = ["Patrick Arndt <patrick.arndt.99@web.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features=["attributes"]} 
chrono = "0.4.34"
clap = { version = "4.5.1", features=["cargo"]}
futures = "0.3.30"
