[package]
name = "statiker"
version = "0.1.2"
edition = "2021"
description = "Serves static files from a directory"
authors = ["Patrick Arndt <patrick.arndt.99@web.de>"]

[dependencies]
async-std = { version = "1.12.0", features=["attributes"]} 
chrono = "0.4.34"
clap = { version = "4.5.1", features=["cargo"]}
futures = "0.3.30"
