[package]
name = "statiker"
version = "0.2.3"
edition = "2021"
description = "Serves static files from a directory"
authors = ["Patrick Arndt <patrick.arndt.99@web.de>"]

[[bin]]
name = "statiker"      # Name of the binary
path = "./src/main.rs" # Path to the source file


[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.5.1", features = ["cargo"] }
surfer = "0.3.1" 
